--- a/src/components/organisms/battles/Battles.scss
+++ b/src/components/organisms/battles/Battles.scss
@@ -1,13 +1,21 @@
 @import '../../../scss/foundation/variables';
 
 .battles{
-    @media (max-width:$lg){
+
+
+    @media (max-width:$sm){
+        background: rgb(15, 15, 15);        
+    }
+
+    @media (min-width:$sm){
         background-size: 400px, cover;
         background-position: left;
     }
+    
     @media (min-width:$lg){
         background-size: 500px,cover;
     }
+
     min-height: 969px;
     background:  url('../../../assets/sunTzuStatue.png'),url('../../../assets/radialGradientBattles.png') ;
     background-position: 10%;
@@ -17,15 +25,19 @@
     position: relative;
 
     & .battles-text{
-
-        @media (max-width:$lg){
+        @media (max-width:$sm){
+            padding: 0 2rem 0 4rem;
+            left: 0;
+            top: 10%;
+        }
+        @media (min-width:$sm){
             left: 40%;
             top: 10%;
             width: 60%;
         }
         color: white;
         padding-left: 10rem;
-        width: 50%;
+        width: 100%;
         position: absolute; 
         left: 50%;
         top: 20%;
@@ -51,6 +63,7 @@
         }
 
         & h1{
+          
             color: #FFF;
             font-size: $h1;
             font-family:$bebas-neue;
@@ -60,6 +73,7 @@
         }
 
         & h2{
+          
             padding-top: 4rem;
             color: $warrior-red;
             font-size: $h2;
@@ -69,6 +83,7 @@
         }
         
         & h3{
+           
             font-size: 2.4rem;
             font-family: $bebas-neue;
             font-weight: $bold;
@@ -77,7 +92,10 @@
         
 
         & p{
-            @media (max-width:$lg){
+            @media (max-width:$sm){
+                max-width: 100%;
+            }
+            @media (min-width:$lg){
                 max-width: 80%;
             }
             color: $white;
